<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.mygolftracker.activites.GolfRoundActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent_green"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/roundCourse"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/hint_courseName"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/roundDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/hint_date"
                    android:inputType="date"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/purple_200"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addRound"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/hole1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole1" />
                <EditText
                    android:id="@+id/hole2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole2" />
                <EditText
                    android:id="@+id/hole3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole3" />
                <EditText
                    android:id="@+id/hole4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole4" />
                <EditText
                    android:id="@+id/hole5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole5" />
                <EditText
                    android:id="@+id/hole6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole6" />
                <EditText
                    android:id="@+id/hole7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole7" />
                <EditText
                    android:id="@+id/hole8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole8" />
                <EditText
                    android:id="@+id/hole9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/hint_hole9" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>