<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/roundListFragment">

    <fragment
        android:id="@+id/roundListFragment"
        android:name="ie.marnane.mygolftracker.ui.roundList.RoundListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_round_list">
        <action
            android:id="@+id/action_roundListFragment_to_roundFragment"
            app:destination="@id/roundFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
        <action
            android:id="@+id/action_roundListFragment_to_roundUpdateFragment"
            app:destination="@id/roundUpdateFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
        <action
            android:id="@+id/action_roundListFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ie.marnane.mygolftracker.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/roundFragment"
        android:name="ie.marnane.mygolftracker.ui.round.RoundFragment"
        android:label="@string/menu_round"
        tools:layout="@layout/fragment_round" >
        <action
            android:id="@+id/action_roundFragment_to_roundListFragment"
            app:destination="@id/roundListFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
        <argument
            android:name="round"
            app:argType="ie.marnane.mygolftracker.models.GolfRoundModel" />
    </fragment>
    <fragment
        android:id="@+id/roundUpdateFragment"
        android:name="ie.marnane.mygolftracker.ui.roundUpdate.RoundUpdateFragment"
        android:label="@string/menu_updateRound"
        tools:layout="@layout/fragment_round_update">
        <argument
            android:name="roundId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="ie.marnane.mygolftracker.ui.map.MapsFragment"
        android:label="Rounds Map"
        tools:layout="@layout/fragment_maps" />
</navigation>